--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2118,11 +2118,170 @@
     </string-array>
 
     <string-array name="core_benchmarks">
-        <item>no programs</item>
+
+        <item>5C Benchmark</item>
         <item>Grips &amp; Grades test</item>
-        <item>6,6,7,3,150,360</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+        <item>5,1,10,0,3,50,120</item>
+        <item>6,4,4,6,6,2,2,6,2,2</item>
+        <item>1,1,1,1,1,1,1,1,2,2</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>2,9,9,2,6,8,8,6,14,14,4,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,45,120</item>
+        <item>3,9,9,3,9,8,8,9,4,4,14,14</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,100</item>
+        <item>9,11,11,9,8,8,11,11,9,4,4,9,14,6,6,14</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>9,10,10,9,8,8,11,11,8,4,4,8,14,6,6,14</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>7,7,10,10,8,17,17,8,6,8,8,6,6,11,11,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>10,16,16,10,8,17,17,8,9,8,8,9,6,11,11,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>5,5,7,17,17,7,8,13,13,8,7,13,13,7,8,12,12,8,9,7,7,9,15,15</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>5,5,10,17,17,10,8,13,13,8,7,13,13,7,7,12,12,7,8,8,18,15,15,18</item>
+        <item>1,1,1,1,1,1,1,1,1,1,1,1,1,1,2,2,2,2,3,3,5,5,5,5</item>
+
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>11,1,10,0,3,35,80</item>
+        <item>16,17,17,16,17,17,10,9,9,10,8,8,11,12,12,11,15,18,18,15,18,18</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5</item>
+
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>11,1,10,0,3,30,80</item>
+        <item>13,17,17,13,17,17,10,12,12,10,8,8,10,12,12,10,15,18,18,15,18,18</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,30,60</item>
+        <item>13,13,11,5,5,11,8,5,5,8,18,18,18,6,6,18,15,15</item>
+        <item>1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6</item>
+
+
+
+
+
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>3,6,7,3,2,150,300</item>
+        <item>1,2,4,4,4,6</item>
+        <item>1,1,1,1,1,1</item>
+
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>4,6,7,3,2,150,300</item>
+        <item>6,4,6,2,4,3,2,2</item>
+        <item>1,1,1,1,1,1,1,1</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>4,6,7,3,2,140,300</item>
+        <item>9,4,4,3,6,3,3,2</item>
+        <item>1,1,1,1,1,1,1,1</item>
+
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>4,12,2,9,6,8,14,14,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>11,6,3,9,9,8,14,4,14,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>9,11,8,12,8,8,4,9,14,9</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>9,10,8,11,9,5,4,12,4,9</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>11,11,7,7,6,11,8,6,4,12</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>10,10,7,5,9,8,11,6,8,6</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>7,17,5,5,6,7,11,9,15,15</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>11,13,6,10,6,7,15,15,15,18</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>13,13,11,11,8,8,15,18,18,18,15,15</item>
+        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,90,180</item>
+        <item>13,13,5,5,8,17,18,18,18,9,15,18</item>
+        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>
+
     </string-array>
 
     <!-- Progress with four three and two finger grips -->
