--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="logbook">Logbook</string>
     <string name="help">Help</string>
     <string name="settings">Settings</string>
+    <string name="workout_start_time">Time before workout starts (seconds)</string>
+    <string name="workout_timer_size">Timer size multiplier (0.2&#8211;3.0)</string>
     <string name="benchmark">Benchmark</string>
     <string name="about">About</string>
     <string name="copy_workout">Copy workout</string>
